--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="src/public/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="./src/public/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>mini-react</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/demo/fun-com/index.jsx"></script>
+    <script type="module" src="./src/demo/fun-com/index.jsx"></script>
     <!-- <script type="module" src="/src/class.jsx"></script> -->
     <!-- <script type="module" src="/src/demo.jsx"></script> -->
   </body>
