--- a/index.html
+++ b/index.html
@@ -5,11 +5,34 @@
     <link rel="icon" type="image/svg+xml" href="./src/public/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>mini-react</title>
+    <style>
+      #root {
+        width: 800px;
+        margin: 0 auto;
+        /* background-color: azure; */
+      }
+    </style>
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="./src/demo/fun-com/index.jsx"></script>
-    <!-- <script type="module" src="/src/class.jsx"></script> -->
-    <!-- <script type="module" src="/src/demo.jsx"></script> -->
+    <div id="root">
+      <h3>
+        Implement Mini-React in 400 lines of code, a minimal model with
+        asynchronous interruptible updates.
+      </h3>
+      <h3>
+        <span style="color: #7091f5">Feature</span>: Function Components + Hooks
+      </h3>
+      <img src="./src/public/mini-react.png" alt="" style="width: 400px;">
+      <br/>
+      <div>
+        <h3>Demo</h3>
+        <h3>
+          <a href="./dist/index.html">tic-tac-toe tutorial example</a>
+        </h3>
+      </div>
+
+    </div>
+    <!-- <script type="module" src="./src/demo/fun-com/index.jsx"></script> -->
+    </script>
   </body>
 </html>
