--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div>
         <h3>Demo</h3>
         <h3>
-          <a href="./dist/index.html">tic-tac-toe tutorial example</a>
+          <a href="./src/../dist/index.html">tic-tac-toe tutorial example</a>
         </h3>
       </div>
 
